--- a/RCLCPP3/num2/CMakeLists.txt
+++ b/RCLCPP3/num2/CMakeLists.txt
@@ -13,7 +13,7 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(geometry_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 
 add_executable(pub src/pub.cpp) 
 ament_target_dependencies(pub rclcpp std_msgs)
